other-vpol/imagepullpolicy-always/.kyverno-test-exceptions/resource.yaml
apiVersion: v1
kind: Pod
metadata: {name: myapp-pod-2, namespace: policy-exceptions}
spec:
  containers:
  - {name: nginx, image: nginx:latest, imagePullPolicy: IfNotPresent}
